# mlda-barn-2025

./: .gitignore  Dockerfile  README.md  Singularityfile.def  check_cuda_gpu.py  launch.sh  ros_entrypoint.sh  run_combined.py  run_rviz_kul.py  run_rviz_mpc.py  run_rviz_rl.py  run_with_restart.py
free_space_motion_tube/: CMakeLists.txt  README.md
free_space_motion_tube/configuration/: free_space.json
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/: CMakeLists.txt  package.xml
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/configs/: config.rviz
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/configs/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/include/: barn_motion_tube.h
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/launch/: move_base_free_space.launch  move_base_motion_tube.launch
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/nodes/: barn_motion_tube_node.cpp  old_working_node.cpp
free_space_motion_tube/examples/ros/src/free_space_motion_tube_ros/src/: barn_motion_tube.cpp
free_space_motion_tube/include/free_space_motion_tube/activity/: activity.h
free_space_motion_tube/include/free_space_motion_tube/core/: basic.h  motion_primitive.h  motion_tube.h  motion_tube_cartesian.h  motion_tube_sensor_space.h
free_space_motion_tube/src/activity/: CMakeLists.txt  activity.c
free_space_motion_tube/src/activity/examples/: demo.c  logfile.c
free_space_motion_tube/src/core/: basic.c  motion_primitive.c  motion_tube.c  motion_tube_cartesian.c  motion_tube_sensor_space.c
free_space_motion_tube/test/: CMakeLists.txt  sample_line_segment_test.cpp  sample_motion_primitive_test.cpp  template_test.cpp
jackal_helper/: CMakeLists.txt
jackal_helper/configs/params/: costmap_common_params.yaml  global_planner_params.yaml  move_base_params.yaml
jackal_helper/configs/params/odom_nav_params/: local_costmap_params.yaml
jackal_helper/launch/: config_file.rviz  gazebo_launch_keyboard.launch  move_base_imitation.launch  move_base_mlda.launch  move_base_mlda_rviz_auto.launch  move_base_motion_tube.launch  move_base_rl.launch  move_base_rl_kul.launch  rviz_launch.launch
jackal_helper/msg/: ResultData.msg
jackal_helper/worlds/BARN/: change_camera.py  world_0.world  world_1.world  world_10.world  world_100.world  world_101.world  world_102.world  world_103.world  world_104.world  world_105.world  world_106.world  world_107.world  world_108.world  world_109.world  world_11.world  world_110.world  world_111.world  world_112.world  world_113.world  world_114.world  world_115.world  world_116.world  world_117.world  world_118.world  world_119.world  world_12.world  world_120.world  world_121.world  world_122.world  world_123.world  world_124.world  world_125.world  world_126.world  world_127.world  world_128.world  world_129.world  world_13.world  world_130.world  world_131.world  world_132.world  (+261 more)
jackal_helper/worlds/DynaBARN/: change_camera.py  world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_15.world  world_16.world  world_17.world  world_18.world  world_19.world  world_2.world  world_20.world  world_21.world  world_22.world  world_23.world  world_24.world  world_25.world  world_26.world  world_27.world  world_28.world  world_29.world  world_3.world  world_30.world  world_31.world  world_32.world  world_33.world  world_34.world  world_35.world  world_36.world  world_37.world  world_38.world  world_39.world  world_4.world  world_40.world  world_41.world  world_42.world  world_43.world  (+21 more)
mlda_algo/: CMakeLists.txt  package.xml
mlda_algo/python/: inspection.py  mpc_algo_right_left.py  mpc_node.py  occupancy_cloud_pub.py  scan_cloud_pub.py  test.ipynb
rl_a2c/: CMakeLists.txt  package.xml
rl_a2c/python/: a2c_model.py  a2c_node.py  velocity_mixer.py
